--- a/app/src/main/res/drawable/circle_mask.xml
+++ b/app/src/main/res/drawable/circle_mask.xml
@@ -1,4 +1,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@android:color/transparent" />
+
+    <!-- Transparent fill -->
+    <solid android:color="#80FFFFFF" />
+
+    <!-- Padding around the shape -->
+    <stroke
+        android:width="2dp"
+        android:color="@color/primary" />
+    <padding
+        android:left="2dp"
+        android:top="2dp"
+        android:right="2dp"
+        android:bottom="2dp" />
 </shape>
