--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,12 +30,20 @@
         <item name="background">@drawable/blueskybackground</item>
         <item name="srcCompat">@drawable/blueskybackground</item>
     </style>
+    <style name="ProfilePhotoBackground">
+        <item name="android:background">@drawable/circle_mask</item>
+    </style>
+    <style name="ProfileChangeButtonBackground">
+        <item name="android:background">@drawable/circular_background_button</item>
+    </style>
     <style name="institutionLogo">
         <item name="srcCompat">@drawable/ic_education</item>
     </style>
     <style name="cameraLogo">
         <item name="srcCompat">@drawable/ic_camera_black</item>
-
+    </style>
+    <style name="icon_edit">
+        <item name="srcCompat">@drawable/edit_icon</item>
     </style>
 
 
