--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
-            app:title="AI Assistant"
+            app:title="Dormie"
             app:titleTextColor="@android:color/white"
             app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
 
